# $Id: CHANGELOG,v 1.50 2003/10/09 12:27:49 jaco Exp $

* Thu, Oct 09, 2003, 0.5.7-cvs
  + Jaco Greeff <jaco@linuxminicd.org>:
    [Rules.mk]:
      - Created list for default normal and SCSI modules
      - Created listing for optional modules
    [linuxrc]:
      - Allow for finding the cloop image on SCSI devices as well
        by probing with all the SCSI modules
      - Added support for zlib_inflate if exists as a module
      - Added support for translucency kernel module
    [mklivecd]:
      - Be verbose in depmod command
      - Copy SCSI and optinal modules in addition to normal
        (required) ones to initrd


* Mon, Oct 06, 2003, 0.5.6
  + Buchan Milne <bgmilne@cae.co.za>:
    [mklivecd]:
      - Fix rootdir to use the kernel/modules from the chroot
      - Add basic bootsplash support if bootsplash is installed
        on the image'd system (normal as well as chroot)
      - Avoid premature shell expansion polluting the exclude list
      - Optimised command-line parsing to not use redundant echo's
      - Added bootsplash theme support with '--theme' option
    [mklivecd.spec]:
      - Updated to allow for rpmbuild -ta <tarball> to work for
        a CVS snapshot generated via 'make dist'
  + Jaco Greeff <jaco@linuxminicd.org>:
    [FAQ]:
      - Updated to include some compression parameter
        statistics (describes mklivecd '--blocksize' and
        '--looptype' options)
      - Added an entry for the "keyb=<mapping>' isolinux boot
        option
      - Added an entry for the full list of available keyboard
        mappings and their descriptions
      - Added an QA for the creation of LSS images as used by
        the 'mklivecd --iso-bgimage' command
      - Added an QA for the Mandrake isolinux graphics extension
      - Added entry for random hangs (attributed to cloop < 1.02)
    [Makefile]:
      - Combined piped sed commands into one
      - Removed non-existing busybox and cloop version