@@ -1,10 +1,11 @@
-# $Id: CHANGELOG,v 1.50 2003/10/09 12:27:49 jaco Exp $
+# $Id: CHANGELOG,v 1.51 2003/10/10 04:51:39 jaco Exp $
 
 * Thu, Oct 09, 2003, 0.5.7-cvs
   + Jaco Greeff <jaco@linuxminicd.org>:
     [Rules.mk]:
       - Created list for default normal and SCSI modules
       - Created listing for optional modules
+      - Split modules into Modules.mk
     [linuxrc]:
       - Allow for finding the cloop image on SCSI devices as well
         by probing with all the SCSI modules
